--- a/Samples/basic/CMakeLists.txt
+++ b/Samples/basic/CMakeLists.txt
@@ -4,8 +4,8 @@ add_subdirectory("demo")
 add_subdirectory("bitmapfont")
 
 # Negotiate inclusion of Lottie sample
-if(RMLUI_ENABLE_LOTTIE_PLUGIN)
+if(RMLUI_LOTTIE_PLUGIN)
     add_subdirectory("lottie")
 else()
-    message(NOTICE "Lottie sample disabled due to RMLUI_ENABLE_LOTTIE_PLUGIN=OFF")
+    message(NOTICE "Lottie sample disabled due to RMLUI_LOTTIE_PLUGIN=OFF")
 endif()
