--- a/Samples/basic/demo/CMakeLists.txt
+++ b/Samples/basic/demo/CMakeLists.txt
@@ -1,9 +1,9 @@
 if(NOT (RMLUI_FONT_INTERFACE STREQUAL "none"))
     # Declare executable
-    add_executable(rmlui_samples_demo WIN32
+    add_executable(rmlui_sample_demo WIN32
         src/main.cpp
     )
 
     # Link shell library
-    target_link_libraries(rmlui_samples_demo PRIVATE rmlui_samples_shell)
+    target_link_libraries(rmlui_sample_demo PRIVATE rmlui_sample_shell)
 endif()
