--- a/Samples/basic/lottie/CMakeLists.txt
+++ b/Samples/basic/lottie/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Declare executable
-add_executable(rmlui_samples_lottie WIN32
+add_executable(rmlui_sample_lottie WIN32
     src/main.cpp
 )
 
 # Link shell library
-target_link_libraries(rmlui_samples_lottie PRIVATE rmlui_samples_shell)
+target_link_libraries(rmlui_sample_lottie PRIVATE rmlui_sample_shell)
