--- a/Samples/basic/CMakeLists.txt
+++ b/Samples/basic/CMakeLists.txt
@@ -14,6 +14,11 @@ if(RMLUI_FONT_ENGINE_ENABLED)
 	add_subdirectory("transform")
 	add_subdirectory("treeview")
 
+	if(WIN32)
+		add_subdirectory("ime")
+	else()
+		message(STATUS "IME sample disabled because Windows is the only supported target system")
+	endif()
 	if(RMLUI_HARFBUZZ_SAMPLE)
 		add_subdirectory("harfbuzz")
 	else()
