--- a/Source/Core/CMakeLists.txt
+++ b/Source/Core/CMakeLists.txt
@@ -181,6 +181,7 @@ add_library(rmlui_core
 	Template.h
 	TemplateCache.cpp
 	TemplateCache.h
+	TextInputMethodEditor.cpp
 	Texture.cpp
 	TextureDatabase.cpp
 	TextureDatabase.h
@@ -315,6 +316,8 @@ target_sources(rmlui_core PRIVATE
 	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/StyleSheetTypes.h"
 	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/StyleTypes.h"
 	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/SystemInterface.h"
+	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/TextInputMethodContext.h"
+	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/TextInputMethodEditor.h"
 	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/TextShapingContext.h"
 	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/Texture.h"
 	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/Traits.h"
