Add ability to use a lua library compiled as C++ rarely the case, but for an in-project compiled lua can happen, in which case extern "C" would result in linking errors allows for exceptions to work properly through the lua interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,6 +159,7 @@ option(BUILD_LUA_BINDINGS "Build Lua bindings" OFF)
 
 if (BUILD_LUA_BINDINGS)
 	option(BUILD_LUA_BINDINGS_FOR_LUAJIT "Build Lua bindings using luajit" OFF)
+	option(RMLUI_LUA_AS_CXX "Lua library was compiled with a C++ compiler" OFF)
 endif()
 
 if(APPLE)
@@ -417,6 +418,9 @@ if(BUILD_LUA_BINDINGS)
 		list(APPEND LUA_BINDINGS_INCLUDE_DIRS ${LUA_INCLUDE_DIR})
 		list(APPEND LUA_BINDINGS_LINK_LIBS ${LUA_LIBRARIES})
 	endif()
+	if(RMLUI_LUA_AS_CXX)
+		list(APPEND LUA_BINDINGS_PUBLIC_DEFS -DRMLUI_LUA_COMPILED_AS_CXX)
+	endif()
 endif()
 
 # rlottie
@@ -664,9 +668,11 @@ if(BUILD_LUA_BINDINGS)
 	if(NOT BUILD_FRAMEWORK)
 		target_link_libraries(RmlLua RmlCore ${LUA_BINDINGS_LINK_LIBS})
 		target_include_directories(RmlLua PUBLIC ${LUA_BINDINGS_INCLUDE_DIRS})
+		target_compile_definitions(RmlLua PUBLIC ${LUA_BINDINGS_PUBLIC_DEFS})
 	else()
 		target_link_libraries(RmlUi ${LUA_BINDINGS_LINK_LIBS})
 		target_include_directories(RmlUi PUBLIC ${LUA_BINDINGS_INCLUDE_DIRS})
+		target_compile_definitions(RmlUi PUBLIC ${LUA_BINDINGS_PUBLIC_DEFS})
 	endif()
 endif()
 
