--- a/Samples/basic/ime/CMakeLists.txt
+++ b/Samples/basic/ime/CMakeLists.txt
@@ -2,6 +2,8 @@ set(SAMPLE_NAME "ime")
 set(TARGET_NAME "${RMLUI_SAMPLE_PREFIX}${SAMPLE_NAME}")
 
 add_executable(${TARGET_NAME} WIN32
+	src/SystemFontWin32.cpp
+	src/SystemFontWin32.h
 	src/main.cpp
 )
 
