Add the IME sample only if a Win32 backend is used.

--- a/Samples/basic/CMakeLists.txt
+++ b/Samples/basic/CMakeLists.txt
@@ -14,11 +14,6 @@ if(RMLUI_FONT_ENGINE_ENABLED)
 	add_subdirectory("transform")
 	add_subdirectory("treeview")
 
-	if(WIN32)
-		add_subdirectory("ime")
-	else()
-		message(STATUS "IME sample disabled because Windows is the only supported target system")
-	endif()
 	if(RMLUI_HARFBUZZ_SAMPLE)
 		add_subdirectory("harfbuzz")
 	else()
@@ -33,5 +28,12 @@ if(RMLUI_FONT_ENGINE_ENABLED)
 		add_subdirectory("svg")
 	else()
 		message(STATUS "SVG sample disabled due to RMLUI_SVG_PLUGIN=OFF")
+	endif()
+
+	# Enable the IME sample only for Windows backends; no other platform backend is currently supported.
+	if(RMLUI_BACKEND MATCHES "^Win32")
+		add_subdirectory("ime")
+	else()
+		message(STATUS "IME sample disabled due to RMLUI_BACKEND not being prefixed by Win32")
 	endif()
 endif()
