--- a/Samples/basic/data_binding/CMakeLists.txt
+++ b/Samples/basic/data_binding/CMakeLists.txt
@@ -1,10 +1,8 @@
-set(SAMPLE_NAME "customlog")
+set(SAMPLE_NAME "data_binding")
 set(TARGET_NAME "${RMLUI_SAMPLE_PREFIX}${SAMPLE_NAME}")
 
 add_executable(${TARGET_NAME} WIN32
 	src/main.cpp
-	src/SystemInterface.cpp
-	src/SystemInterface.h
 )
 
 set_common_target_options(${TARGET_NAME})
