--- a/Samples/basic/tree_view/CMakeLists.txt
+++ b/Samples/basic/tree_view/CMakeLists.txt
@@ -1,7 +1,9 @@
-set(SAMPLE_NAME "loaddocument")
+set(SAMPLE_NAME "tree_view")
 set(TARGET_NAME "${RMLUI_SAMPLE_PREFIX}${SAMPLE_NAME}")
 
 add_executable(${TARGET_NAME} WIN32
+	src/FileBrowser.cpp
+	src/FileBrowser.h
 	src/main.cpp
 )
 
