--- a/Samples/lua_invaders/CMakeLists.txt
+++ b/Samples/lua_invaders/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SAMPLE_NAME "luainvaders")
+set(SAMPLE_NAME "lua_invaders")
 set(TARGET_NAME "${RMLUI_SAMPLE_PREFIX}${SAMPLE_NAME}")
 
 add_executable(${TARGET_NAME} WIN32
