Only enable effects sample with supported backends

--- a/Samples/basic/CMakeLists.txt
+++ b/Samples/basic/CMakeLists.txt
@@ -17,7 +17,7 @@ if(RMLUI_FONT_ENGINE_ENABLED)
 	if(RMLUI_HARFBUZZ_SAMPLE)
 		add_subdirectory("harfbuzz")
 	else()
-		message(STATUS "Harfbuzz sample disabled due to RMLUI_HARFBUZZ_SAMPLE=OFF")
+		message(STATUS "HarfBuzz sample disabled due to RMLUI_HARFBUZZ_SAMPLE=OFF")
 	endif()
 	if(RMLUI_LOTTIE_PLUGIN)
 		add_subdirectory("lottie")
