--- a/Samples/basic/effects/CMakeLists.txt
+++ b/Samples/basic/effects/CMakeLists.txt
@@ -1,3 +1,8 @@
+if(NOT RMLUI_BACKEND MATCHES "GL3$")
+	message(STATUS "Effects sample disabled - only available on GL3 backends")
+	return()
+endif()
+
 set(SAMPLE_NAME "effects")
 set(TARGET_NAME "${RMLUI_SAMPLE_PREFIX}${SAMPLE_NAME}")
 
