--- a/Samples/basic/demo/CMakeLists.txt
+++ b/Samples/basic/demo/CMakeLists.txt
@@ -14,3 +14,8 @@ set_common_target_options(${TARGET_NAME})
 target_link_libraries(${TARGET_NAME} PRIVATE rmlui_shell)
 
 install_sample_target(${TARGET_NAME})
+
+if(MSVC)
+	# Set UTF-8 on MSVC to properly encode emoji characters.
+	target_compile_options(${TARGET_NAME} PRIVATE /utf-8)
+endif()
