Allow documents to set themselves as focusable from modal documents, use in debugger to solve #642

--- a/Source/Debugger/CMakeLists.txt
+++ b/Source/Debugger/CMakeLists.txt
@@ -8,6 +8,8 @@ add_library(rmlui_debugger
 	DebuggerSystemInterface.h
 	ElementContextHook.cpp
 	ElementContextHook.h
+	ElementDebugDocument.cpp
+	ElementDebugDocument.h
 	ElementInfo.cpp
 	ElementInfo.h
 	ElementLog.cpp
