--- a/Samples/basic/CMakeLists.txt
+++ b/Samples/basic/CMakeLists.txt
@@ -34,6 +34,6 @@ if(RMLUI_FONT_ENGINE_ENABLED)
 	if(RMLUI_BACKEND MATCHES "^Win32")
 		add_subdirectory("ime")
 	else()
-		message(STATUS "IME sample disabled due to RMLUI_BACKEND not being prefixed by Win32")
+		message(STATUS "IME sample disabled - only available with Win32 backends, see RMLUI_BACKEND")
 	endif()
 endif()
