Flexbox layout: Fix hypothetical width of replaced elements in column direction layout, see #666

--- a/Tests/Source/UnitTests/CMakeLists.txt
+++ b/Tests/Source/UnitTests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(${TARGET_NAME}
 	ElementStyle.cpp
 	EventListener.cpp
 	Filter.cpp
+	FlexFormatting.cpp
 	Layout.cpp
 	Localization.cpp
 	main.cpp
