--- a/Backends/CMakeLists.txt
+++ b/Backends/CMakeLists.txt
@@ -153,6 +153,17 @@ if(UNIX)
 	target_link_libraries(rmlui_backend_GLFW_GL3 INTERFACE ${CMAKE_DL_LIBS})
 endif()
 
+add_library(rmlui_backend_GLFW_DX11 INTERFACE)
+target_sources(rmlui_backend_GLFW_DX11 INTERFACE
+	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Platform_GLFW.cpp"
+	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Renderer_DX11.cpp"
+	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Backend_GLFW_DX11.cpp"
+	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Platform_GLFW.h"
+	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Renderer_DX11.h"
+	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Include_Windows.h"
+)
+target_link_libraries(rmlui_backend_GLFW_DX11 INTERFACE rmlui_backend_common_headers d3d11.lib dxgi.lib d3dcompiler.lib glfw)
+
 add_library(rmlui_backend_GLFW_VK INTERFACE)
 target_sources(rmlui_backend_GLFW_VK INTERFACE
 	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Platform_GLFW.cpp"
