--- a/Tests/Source/UnitTests/CMakeLists.txt
+++ b/Tests/Source/UnitTests/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(${TARGET_NAME}
 	Debugger.cpp
 	Decorator.cpp
 	Element.cpp
+	ElementBackgroundBorder.cpp
 	ElementDocument.cpp
 	ElementHandle.cpp
 	ElementFormControlSelect.cpp
